Data Loss fix plus gradle fix for actual build dpeendancies